objects/rh2__PS_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Parameters used for the Rollup Helper application.</description>
    <fields>
        <fullName>rh2__Advanced_Currency__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to determine if advanced currency management is enabled.</description>
        <inlineHelpText>If Advanced Currency Management is enabled in your organization select this check box.</inlineHelpText>
        <label>zDeprecated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rh2__Advanced_Currency_del__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to determine if advanced currency management is enabled.</description>
        <inlineHelpText>If Advanced Currency Management is enabled in your organization select this check box.</inlineHelpText>
        <label>zDeprecated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rh2__Batch_Agent_Id__c</fullName>
        <label>Batch Agent Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__Disable_Advanced_Currency__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to determine if advanced currency management should be disabled.</description>
        <inlineHelpText>If Advanced Currency Management is disabled in your organization select this check box.</inlineHelpText>
        <label>Disable Advanced Currency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rh2__Enable_Validation_Rule_Helper__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked you can have Rollup Helper updates excluded from your select validation rules.</description>
        <inlineHelpText>To enable Rollup Helper updates to be excluded from a Validation Rule add &apos;&amp;&amp; $Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c&apos; at the end of the contents of the Error Condition Formula section of a validation rule.</inlineHelpText>
        <label>Enable Validation Rule Helper</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rh2__MaxBatch__c</fullName>
        <inlineHelpText>Number of batches to initiate concurrently.</inlineHelpText>
        <label>Max Concurrent Batch Processes</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rh2__MaxFuture__c</fullName>
        <inlineHelpText>Number of Future method calls to initiate concurrently.</inlineHelpText>
        <label>Max Concurrent Future Processes</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rh2__MaxQueueable__c</fullName>
        <label>Maximum Jobs Added to the Queue</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rh2__Max_Batch__c</fullName>
        <inlineHelpText>Number of batches to initiate concurrently.</inlineHelpText>
        <label>zDeprecated</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rh2__Max_Future__c</fullName>
        <inlineHelpText>Number of Future method calls to initiate concurrently.</inlineHelpText>
        <label>zDeprecated</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rh2__Parent_Sync_Job_Id__c</fullName>
        <label>Parent Sync Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__Premium_Key__c</fullName>
        <label>Premium Key</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__RecordScope__c</fullName>
        <inlineHelpText>Maximum number of records to process asynchronously with Rollup Helper.  This impacts the number of batch / future methods will be called in order to process your entire set of records to complete an asynchronous transaction.  Best to be a multiple of 5.</inlineHelpText>
        <label>Record Scope</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rh2__Record_Size__c</fullName>
        <inlineHelpText>Maximum number of records to process asynchronously with Rollup Helper.  This impacts the number of batch / future methods will be called in order to process your entire set of records to complete an asynchronous transaction.  Best to be a multiple of 5.</inlineHelpText>
        <label>zDeprecated</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rh2__Rollup_Inactive_Upon_Creation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rollup Inactive Upon Creation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rh2__Rollups_Per_Async__c</fullName>
        <inlineHelpText>This setting modifies the number of rollups processed per asynchronous job request.</inlineHelpText>
        <label>Rollups Per Asynchronous Request</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rh2__Run_Validation_Rule__c</fullName>
        <defaultValue>true</defaultValue>
        <description>LEAVE THIS OPTION CHECKED. If unchecked then users will enter records with validation rules not in effect.  When this setting is added to a validation rule, Rollup Helper will turn off the validation rule upon update to a target record.</description>
        <inlineHelpText>LEAVE THIS OPTION CHECKED</inlineHelpText>
        <label>Run Validation Rule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rh2__runAsModifyingUserOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox will cause Rollup Helper to only process queued asynchronous requests for the user that initiated the asynchronous request. If there is a queue record for a user that is not the Modified By user then the queue record will not be processed until a scheduled class runs the queue record or the user associated with the queue record adds an item to the Rollup Helper queue.</description>
        <inlineHelpText>This checkbox will cause Rollup Helper to only process queued asynchronous requests for the user that initiated the asynchronous request.</inlineHelpText>
        <label>Process Queue Items Based On Modified By</label>
        <type>Checkbox</type>
    </fields>
    <label>Rollup Helper Settings</label>
</CustomObject>